--- a/src/components/markdown-styles.module.css
+++ b/src/components/markdown-styles.module.css
@@ -1,18 +1,18 @@
 .markdown {
-  @apply text-lg leading-relaxed;
+    letter-spacing: 0.03em;
 }
 
 .markdown p,
 .markdown ul,
 .markdown ol,
 .markdown blockquote {
-  @apply my-6;
+    margin-top: 60px;
 }
 
 .markdown h2 {
-  @apply text-3xl mt-12 mb-4 leading-snug;
+    font-size: 2rem;
 }
 
 .markdown h3 {
-  @apply text-2xl mt-8 mb-4 leading-snug;
+    font-size: 3rem;
 }
