--- a/src/components/markdown/markdown-styles.module.css
+++ b/src/components/markdown/markdown-styles.module.css
@@ -1,22 +1,83 @@
 .markdown {
-    letter-spacing: 0.03em;
+    letter-spacing: 0.1em !important;
 }
 
-.markdown p,
-.markdown ul,
+.markdown p {
+    letter-spacing: 0.1em;
+    line-height: 2;
+}
+
 .markdown ol,
 .markdown blockquote {
+
+}
+
+.markdown ul,
+.markdown ol {
+    /*右に少し寄せないと、頭の記号がコンテナからはみ出る*/
+    list-style: disc;
+    padding-left: 1rem;
+    margin-bottom: 60px;
+}
+
+.markdown li {
+    margin-bottom: 10px;
+}
+
+.markdown h1 {
+    font-size: 1.8rem;
     margin-top: 60px;
+    margin-bottom: 20px;
+    font-weight: bold;
 }
 
 .markdown h2 {
-    font-size: 2rem;
+    font-size: 1.6rem;
+    margin-top: 60px;
+    margin-bottom: 20px;
+    font-weight: bold;
 }
 
 .markdown h3 {
-    font-size: 3rem;
+    font-size: 1.4rem;
+    margin-top: 60px;
+    margin-bottom: 20px;
+    font-weight: bold;
 }
 
+.markdown h4 {
+    font-size: 1.2rem;
+    margin-top: 60px;
+    margin-bottom: 20px;
+    font-weight: bold;
+}
+
+.markdown h4 {
+    font-size: 1.1rem;
+    margin-top: 60px;
+    margin-bottom: 20px;
+    font-weight: bold;
+}
+
+.markdown h5 {
+    font-size: 1rem;
+    margin-top: 60px;
+    margin-bottom: 20px;
+    font-weight: bold;
+}
+
+.markdown h6 {
+    font-size: 1rem;
+    margin-top: 60px;
+    margin-bottom: 20px;
+    font-weight: bold;
+}
+
+
 .markdown pre {
+    border: aliceblue 1px solid;
     overflow-x: scroll;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    margin-bottom: 20px;
 }
