--- a/src/components/markdown/markdown-styles.module.css
+++ b/src/components/markdown/markdown-styles.module.css
@@ -1,10 +1,45 @@
 .markdown {
-    letter-spacing: 0.1em !important;
+    letter-spacing: 0.1em;
+    line-height: 1.5;
 }
 
 .markdown p {
-    letter-spacing: 0.1em;
-    line-height: 2;
+}
+
+.markdown h1 {
+    font-size: var(--chakra-fontSizes-2xl);
+    margin: 60px 0 10px;
+    font-weight: bold;
+}
+
+.markdown h2 {
+    font-size: var(--chakra-fontSizes-xl);
+    margin: 60px 0 10px;
+    font-weight: bold;
+}
+
+.markdown h3 {
+    font-size: var(--chakra-fontSizes-lg);
+    margin: 60px 0 10px;
+    font-weight: bold;
+}
+
+.markdown h4 {
+    font-size: var(--chakra-fontSizes-md);
+    margin: 60px 0 10px;
+    font-weight: bold;
+}
+
+.markdown h5 {
+    font-size: var(--chakra-fontSizes-sm);
+    margin: 60px 0 10px;
+    font-weight: bold;
+}
+
+.markdown h6 {
+    font-size: var(--chakra-fontSizes-xs);
+    margin: 60px 0 10px;
+    font-weight: bold;
 }
 
 .markdown ol,
@@ -24,60 +59,15 @@
     margin-bottom: 10px;
 }
 
-.markdown h1 {
-    font-size: 1.8rem;
-    margin-top: 60px;
-    margin-bottom: 20px;
-    font-weight: bold;
-}
-
-.markdown h2 {
-    font-size: 1.6rem;
-    margin-top: 60px;
-    margin-bottom: 20px;
-    font-weight: bold;
-}
-
-.markdown h3 {
-    font-size: 1.4rem;
-    margin-top: 60px;
-    margin-bottom: 20px;
-    font-weight: bold;
-}
-
-.markdown h4 {
-    font-size: 1.2rem;
-    margin-top: 60px;
-    margin-bottom: 20px;
-    font-weight: bold;
-}
-
-.markdown h4 {
-    font-size: 1.1rem;
-    margin-top: 60px;
-    margin-bottom: 20px;
-    font-weight: bold;
-}
-
-.markdown h5 {
-    font-size: 1rem;
-    margin-top: 60px;
-    margin-bottom: 20px;
-    font-weight: bold;
-}
-
-.markdown h6 {
-    font-size: 1rem;
-    margin-top: 60px;
-    margin-bottom: 20px;
-    font-weight: bold;
-}
-
-
 .markdown pre {
-    border: aliceblue 1px solid;
-    overflow-x: scroll;
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-    margin-bottom: 20px;
+    font-size: var(--chakra-fontSizes-sm) !important;
+    font-weight: var(--chakra-fontWeights-semibold);
+    font-family: "JetBrains Mono";
+    letter-spacing: 0.05rem;
+    background-color: var(--chakra-colors-gray-800);
+    backdrop-filter: blur(20px);
+    border-radius: 8px;
+    border: 1px solid var(--chakra-colors-gray-700);
+    padding: 1rem;
+    margin: 20px auto;
 }
