--- a/src/components/markdown/markdown-styles.module.css
+++ b/src/components/markdown/markdown-styles.module.css
@@ -36,9 +36,12 @@
     font-weight: bold;
 }
 
-.markdown ol,
-.markdown blockquote {
+.markdown hr {
+    border: 1px solid var(--chakra-colors-gray-700);
+    margin: 20px 0;
+}
 
+.markdown blockquote {
 }
 
 .markdown ul,
@@ -46,7 +49,6 @@
     /*右に少し寄せないと、頭の記号がコンテナからはみ出る*/
     list-style: disc;
     padding-left: 1rem;
-    margin-bottom: 60px;
 }
 
 .markdown li {
