--- a/src/components/markdown/markdown-styles.module.css
+++ b/src/components/markdown/markdown-styles.module.css
@@ -1,63 +1,511 @@
-/*link や next/image コンポーネントに置き換えている要素はコンポーネントの中で見た目のスタイリングをする。
-ここは置き換える必要のない要素のスタイリングをしている。配置関係は全てここに書く*/
-
-.markdown {
-    letter-spacing: 0.1em;
+.markdown-body {
+    -ms-text-size-adjust: 100%;
+    -webkit-text-size-adjust: 100%;
+    margin: 0;
+    background-color: unset;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
     line-height: 1.5;
+    word-wrap: break-word;
 }
 
-.markdown p {
+.markdown-body details,
+.markdown-body figcaption,
+.markdown-body figure {
+    display: block;
 }
 
-.markdown h1 {
-    font-size: var(--chakra-fontSizes-2xl);
-    font-weight: bold;
+.markdown-body summary {
+    display: list-item;
 }
 
-.markdown h2 {
-    font-size: var(--chakra-fontSizes-xl);
-    font-weight: bold;
+.markdown-body [hidden] {
+    display: none !important;
 }
 
-.markdown h3 {
-    font-size: var(--chakra-fontSizes-lg);
-    font-weight: bold;
+.markdown-body a {
 }
 
-.markdown h4 {
-    font-size: var(--chakra-fontSizes-md);
-    font-weight: bold;
+.markdown-body abbr[title] {
+    border-bottom: none;
+    text-decoration: underline dotted;
 }
 
-.markdown h5 {
-    font-size: var(--chakra-fontSizes-sm);
-    font-weight: bold;
+.markdown-body b,
+.markdown-body strong {
+    font-weight: 600;
 }
 
-.markdown h6 {
-    font-size: var(--chakra-fontSizes-xs);
-    font-weight: bold;
+.markdown-body dfn {
+    font-style: italic;
 }
 
-.markdown hr {
-    border: 1px solid var(--chakra-colors-gray-700);
-    margin: 20px 0;
+.markdown-body mark {
 }
 
-.markdown blockquote {
-    margin: 1rem 0;
+.markdown-body small {
+    font-size: 90%;
 }
 
-.markdown ul,
-.markdown ol {
-    padding-left: 1rem;
+.markdown-body sub,
+.markdown-body sup {
+    font-size: 75%;
+    line-height: 0;
+    position: relative;
+    vertical-align: baseline;
 }
 
-.markdown li {
+.markdown-body sub {
+    bottom: -0.25em;
+}
+
+.markdown-body sup {
+    top: -0.5em;
+}
+
+.markdown-body img {
+    border-style: none;
+}
+
+.markdown-body figure {
+    margin: 1em 40px;
+}
+
+.markdown-body hr {
+    overflow: hidden;
+    background: transparent;
+    height: .25em;
+    padding: 0;
+    margin: 24px 0;
+    border: 0;
+}
+
+.markdown-body input {
+    font: inherit;
+    margin: 0;
+    overflow: visible;
+    font-family: inherit;
+    font-size: inherit;
+    line-height: inherit;
+}
+
+.markdown-body [type=button],
+.markdown-body [type=reset],
+.markdown-body [type=submit] {
+    -webkit-appearance: button;
+}
+
+.markdown-body [type=checkbox],
+.markdown-body [type=radio] {
+    box-sizing: border-box;
+    padding: 0;
+}
+
+.markdown-body [type=number]::-webkit-inner-spin-button,
+.markdown-body [type=number]::-webkit-outer-spin-button {
+    height: auto;
+}
+
+.markdown-body [type=search]::-webkit-search-cancel-button,
+.markdown-body [type=search]::-webkit-search-decoration {
+    -webkit-appearance: none;
+}
+
+.markdown-body ::-webkit-input-placeholder {
+    color: inherit;
+    opacity: .54;
+}
+
+.markdown-body ::-webkit-file-upload-button {
+    -webkit-appearance: button;
+    font: inherit;
+}
+
+.markdown-body ::placeholder {
+    color: var(--color-fg-subtle);
+    opacity: 1;
+}
+
+.markdown-body hr::before {
+    display: table;
+    content: "";
+}
+
+.markdown-body hr::after {
+    display: table;
+    clear: both;
+    content: "";
+}
+
+.markdown-body table {
+    border-spacing: 0;
+    border-collapse: collapse;
+}
+
+.markdown-body td,
+.markdown-body th {
+}
+
+.markdown-body details summary {
+    cursor: pointer;
+}
+
+.markdown-body details:not([open]) > *:not(summary) {
+    display: none !important;
+}
+
+.markdown-body a:focus,
+.markdown-body [role=button]:focus,
+.markdown-body input[type=radio]:focus,
+.markdown-body input[type=checkbox]:focus {
+    outline: 2px solid var(--color-accent-fg);
+    outline-offset: -2px;
+    box-shadow: none;
+}
+
+.markdown-body a:focus:not(:focus-visible),
+.markdown-body [role=button]:focus:not(:focus-visible),
+.markdown-body input[type=radio]:focus:not(:focus-visible),
+.markdown-body input[type=checkbox]:focus:not(:focus-visible) {
+    outline: solid 1px transparent;
+}
+
+.markdown-body a:focus-visible,
+.markdown-body [role=button]:focus-visible,
+.markdown-body input[type=radio]:focus-visible,
+.markdown-body input[type=checkbox]:focus-visible {
+    outline: 2px solid var(--color-accent-fg);
+    outline-offset: -2px;
+    box-shadow: none;
+}
+
+.markdown-body a:not([class]):focus,
+.markdown-body a:not([class]):focus-visible,
+.markdown-body input[type=radio]:focus,
+.markdown-body input[type=radio]:focus-visible,
+.markdown-body input[type=checkbox]:focus,
+.markdown-body input[type=checkbox]:focus-visible {
+    outline-offset: 0;
+}
+
+.markdown-body kbd {
+    display: inline-block;
+}
+
+.markdown-body h1,
+.markdown-body h2,
+.markdown-body h3,
+.markdown-body h4,
+.markdown-body h5,
+.markdown-body h6 {
+    margin-top: 120px;
+    margin-bottom: 16px;
+    font-weight: 600;
+    line-height: 1.25;
+}
+
+.markdown-body h1 {
+    padding-bottom: .3em;
+    font-size: 2em;
+}
+
+.markdown-body h2 {
+    padding-bottom: .3em;
+    font-size: 1.5em;
+}
+
+.markdown-body h3 {
+    font-size: 1.25em;
+}
+
+.markdown-body h4 {
+    font-size: 1em;
+}
+
+.markdown-body h5 {
+    font-size: .875em;
+}
+
+.markdown-body h6 {
+    font-size: .85em;
+}
+
+.markdown-body h1 + h2 {
+    margin-top: 24px;
+}
+
+.markdown-body h2 + h3 {
+    margin-top: 24px;
+}
+
+.markdown-body h3 + h4 {
+    margin-top: 24px;
+}
+
+.markdown-body h4 + h5 {
+    margin-top: 24px;
+}
+
+.markdown-body h5 + h6 {
+    margin-top: 24px;
+}
+
+.markdown-body p {
+    margin-top: 0;
     margin-bottom: 10px;
 }
 
+.markdown-body blockquote {
+    margin-bottom: 10px;
+}
 
-.markdown table th {
+.markdown-body ul,
+.markdown-body ol {
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-left: 2em;
+}
 
+.markdown-body ol ol,
+.markdown-body ul ol {
+    list-style-type: lower-roman;
+}
+
+.markdown-body ul ul ol,
+.markdown-body ul ol ol,
+.markdown-body ol ul ol,
+.markdown-body ol ol ol {
+    list-style-type: lower-alpha;
+}
+
+.markdown-body dd {
+    margin-left: 0;
+}
+
+.markdown-body tt,
+.markdown-body code,
+.markdown-body samp {
+    font-family: ui-monospace, SFMono-Regular, SF Mono, Menlo, Consolas, Liberation Mono, monospace;
+}
+
+.markdown-body pre {
+    margin-top: 0;
+    margin-bottom: 0;
+    word-wrap: normal;
+}
+
+.markdown-body input::-webkit-outer-spin-button,
+.markdown-body input::-webkit-inner-spin-button {
+    margin: 0;
+    -webkit-appearance: none;
+    appearance: none;
+}
+
+.markdown-body::before {
+    display: table;
+    content: "";
+}
+
+.markdown-body::after {
+    display: table;
+    clear: both;
+    content: "";
+}
+
+.markdown-body > *:first-child {
+    margin-top: 0 !important;
+}
+
+.markdown-body > *:last-child {
+    margin-bottom: 0 !important;
+}
+
+.markdown-body a:not([href]) {
+    color: inherit;
+    text-decoration: none;
+}
+
+.markdown-body p,
+.markdown-body blockquote,
+.markdown-body ul,
+.markdown-body ol,
+.markdown-body dl,
+.markdown-body table,
+.markdown-body pre,
+.markdown-body details {
+    margin-top: 0;
+    margin-bottom: 16px;
+}
+
+.markdown-body blockquote > :first-child {
+    margin-top: 0;
+}
+
+.markdown-body blockquote > :last-child {
+    margin-bottom: 0;
+}
+
+.markdown-body h1 tt,
+.markdown-body h1 code,
+.markdown-body h2 tt,
+.markdown-body h2 code,
+.markdown-body h3 tt,
+.markdown-body h3 code,
+.markdown-body h4 tt,
+.markdown-body h4 code,
+.markdown-body h5 tt,
+.markdown-body h5 code,
+.markdown-body h6 tt,
+.markdown-body h6 code {
+    padding: 0 .2em;
+}
+
+.markdown-body summary h1,
+.markdown-body summary h2,
+.markdown-body summary h3,
+.markdown-body summary h4,
+.markdown-body summary h5,
+.markdown-body summary h6 {
+    display: inline-block;
+}
+
+.markdown-body summary h1,
+.markdown-body summary h2 {
+    padding-bottom: 0;
+    border-bottom: 0;
+}
+
+.markdown-body ol[type=a] {
+    list-style-type: lower-alpha;
+}
+
+.markdown-body ol[type=A] {
+    list-style-type: upper-alpha;
+}
+
+.markdown-body ol[type=i] {
+    list-style-type: lower-roman;
+}
+
+.markdown-body ol[type=I] {
+    list-style-type: upper-roman;
+}
+
+.markdown-body ol[type="1"] {
+    list-style-type: decimal;
+}
+
+.markdown-body div > ol:not([type]) {
+    list-style-type: decimal;
+}
+
+.markdown-body ul ul,
+.markdown-body ul ol,
+.markdown-body ol ol,
+.markdown-body ol ul {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.markdown-body li > p {
+    margin-top: 16px;
+}
+
+.markdown-body li + li {
+    margin-top: .25em;
+}
+
+.markdown-body dl {
+}
+
+.markdown-body dl dt {
+    padding: 0;
+    margin-top: 16px;
+    font-weight: 600;
+}
+
+.markdown-body dl dd {
+    padding: 0 16px;
+    margin-bottom: 16px;
+}
+
+.markdown-body table th {
+}
+
+.markdown-body table th,
+.markdown-body table td {
+    padding: 6px 13px;
+}
+
+.markdown-body table tr {
+}
+
+.markdown-body table tr:nth-child(2n) {
+}
+
+.markdown-body table img {
+    background-color: transparent;
+}
+
+.markdown-body .emoji {
+    max-width: none;
+    vertical-align: text-top;
+    background-color: transparent;
+}
+
+.markdown-body code,
+.markdown-body tt {
+    padding: .2em .4em;
+    margin: 0;
+    font-size: 85%;
+    white-space: break-spaces;
+    border-radius: 6px;
+}
+
+.markdown-body code br,
+.markdown-body tt br {
+    display: none;
+}
+
+.markdown-body del code {
+    text-decoration: inherit;
+}
+
+.markdown-body samp {
+    font-size: 85%;
+}
+
+.markdown-body pre code {
+    font-size: 100%;
+}
+
+.markdown-body pre > code {
+    padding: 0;
+    margin: 0;
+    word-break: normal;
+    white-space: pre;
+    border: 0;
+}
+
+.markdown-body .remark-highlight {
+    margin-bottom: 16px;
+}
+
+.markdown-body .remark-highlight pre {
+    margin-bottom: 0;
+    word-break: normal;
+}
+
+.markdown-body .remark-highlight pre,
+.markdown-body pre {
+    padding: 16px;
+}
+
+.markdown-body pre code,
+.markdown-body pre tt {
+    margin: 0;
+    border: 0;
+}
+
+.markdown-body ::-webkit-calendar-picker-indicator {
+    filter: invert(50%);
 }
