--- a/src/components/markdown/markdown-styles.module.css
+++ b/src/components/markdown/markdown-styles.module.css
@@ -1,3 +1,5 @@
+/*github mark down css を参考にした*/
+
 .markdown-body {
     -ms-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
@@ -12,6 +14,14 @@
 .markdown-body figcaption,
 .markdown-body figure {
     display: block;
+}
+
+.markdown-body img {
+    border-style: none;
+}
+
+.markdown-body figure {
+    margin: 1em 40px;
 }
 
 .markdown-body summary {
@@ -46,46 +56,37 @@
     font-size: 90%;
 }
 
-.markdown-body sub,
-.markdown-body sup {
-    font-size: 75%;
-    line-height: 0;
-    position: relative;
-    vertical-align: baseline;
-}
-
-.markdown-body sub {
-    bottom: -0.25em;
-}
-
-.markdown-body sup {
-    top: -0.5em;
-}
-
-.markdown-body img {
-    border-style: none;
-}
-
-.markdown-body figure {
-    margin: 1em 40px;
-}
-
 .markdown-body hr {
     overflow: hidden;
     background: transparent;
     height: .25em;
     padding: 0;
     margin: 24px 0;
-    border: 0;
+}
+
+.markdown-body hr::before {
+    display: table;
+    content: "";
+}
+
+.markdown-body hr::after {
+    display: table;
+    clear: both;
+    content: "";
 }
 
 .markdown-body input {
     font: inherit;
     margin: 0;
     overflow: visible;
-    font-family: inherit;
-    font-size: inherit;
     line-height: inherit;
+}
+
+.markdown-body input::-webkit-outer-spin-button,
+.markdown-body input::-webkit-inner-spin-button {
+    margin: 0;
+    -webkit-appearance: none;
+    appearance: none;
 }
 
 .markdown-body [type=button],
@@ -121,45 +122,6 @@
 }
 
 .markdown-body ::placeholder {
-    color: var(--color-fg-subtle);
-    opacity: 1;
-}
-
-.markdown-body hr::before {
-    display: table;
-    content: "";
-}
-
-.markdown-body hr::after {
-    display: table;
-    clear: both;
-    content: "";
-}
-
-.markdown-body table {
-    border-spacing: 0;
-    border-collapse: collapse;
-}
-
-.markdown-body td,
-.markdown-body th {
-}
-
-.markdown-body details summary {
-    cursor: pointer;
-}
-
-.markdown-body details:not([open]) > *:not(summary) {
-    display: none !important;
-}
-
-.markdown-body a:focus,
-.markdown-body [role=button]:focus,
-.markdown-body input[type=radio]:focus,
-.markdown-body input[type=checkbox]:focus {
-    outline: 2px solid var(--color-accent-fg);
-    outline-offset: -2px;
-    box-shadow: none;
 }
 
 .markdown-body a:focus:not(:focus-visible),
@@ -173,7 +135,6 @@
 .markdown-body [role=button]:focus-visible,
 .markdown-body input[type=radio]:focus-visible,
 .markdown-body input[type=checkbox]:focus-visible {
-    outline: 2px solid var(--color-accent-fg);
     outline-offset: -2px;
     box-shadow: none;
 }
@@ -187,9 +148,14 @@
     outline-offset: 0;
 }
 
-.markdown-body kbd {
-    display: inline-block;
+.markdown-body a:focus,
+.markdown-body [role=button]:focus,
+.markdown-body input[type=radio]:focus,
+.markdown-body input[type=checkbox]:focus {
+    outline-offset: -2px;
+    box-shadow: none;
 }
+
 
 .markdown-body h1,
 .markdown-body h2,
@@ -197,19 +163,28 @@
 .markdown-body h4,
 .markdown-body h5,
 .markdown-body h6 {
-    margin-top: 120px;
     margin-bottom: 16px;
     font-weight: 600;
     line-height: 1.25;
 }
 
+.markdown-body h1,
+.markdown-body h2,
+.markdown-body h3 {
+    margin-top: 120px;
+}
+
+.markdown-body h4,
+.markdown-body h5,
+.markdown-body h6 {
+    margin-top: 60px;
+}
+
 .markdown-body h1 {
-    padding-bottom: .3em;
     font-size: 2em;
 }
 
 .markdown-body h2 {
-    padding-bottom: .3em;
     font-size: 1.5em;
 }
 
@@ -230,74 +205,50 @@
 }
 
 .markdown-body h1 + h2 {
-    margin-top: 24px;
+    margin-top: 4px;
 }
 
 .markdown-body h2 + h3 {
-    margin-top: 24px;
+    margin-top: 4px;
 }
 
 .markdown-body h3 + h4 {
-    margin-top: 24px;
+    margin-top: 4px;
 }
 
 .markdown-body h4 + h5 {
-    margin-top: 24px;
+    margin-top: 4px;
 }
 
 .markdown-body h5 + h6 {
-    margin-top: 24px;
+    margin-top: 4px;
 }
 
 .markdown-body p {
     margin-top: 0;
-    margin-bottom: 10px;
+    margin-bottom: 16px;
 }
+
+.markdown-body summary h1,
+.markdown-body summary h2,
+.markdown-body summary h3,
+.markdown-body summary h4,
+.markdown-body summary h5,
+.markdown-body summary h6 {
+    display: inline-block;
+}
+
+.markdown-body details summary {
+    cursor: pointer;
+}
+
+.markdown-body details:not([open]) > *:not(summary) {
+    display: none !important;
+}
+
 
 .markdown-body blockquote {
     margin-bottom: 10px;
-}
-
-.markdown-body ul,
-.markdown-body ol {
-    margin-top: 0;
-    margin-bottom: 0;
-    padding-left: 2em;
-}
-
-.markdown-body ol ol,
-.markdown-body ul ol {
-    list-style-type: lower-roman;
-}
-
-.markdown-body ul ul ol,
-.markdown-body ul ol ol,
-.markdown-body ol ul ol,
-.markdown-body ol ol ol {
-    list-style-type: lower-alpha;
-}
-
-.markdown-body dd {
-    margin-left: 0;
-}
-
-.markdown-body tt,
-.markdown-body code,
-.markdown-body samp {
-    font-family: ui-monospace, SFMono-Regular, SF Mono, Menlo, Consolas, Liberation Mono, monospace;
-}
-
-.markdown-body pre {
-    margin-top: 0;
-    margin-bottom: 0;
-    word-wrap: normal;
-}
-
-.markdown-body input::-webkit-outer-spin-button,
-.markdown-body input::-webkit-inner-spin-button {
-    margin: 0;
-    -webkit-appearance: none;
-    appearance: none;
 }
 
 .markdown-body::before {
@@ -324,18 +275,7 @@
     text-decoration: none;
 }
 
-.markdown-body p,
-.markdown-body blockquote,
-.markdown-body ul,
-.markdown-body ol,
-.markdown-body dl,
-.markdown-body table,
-.markdown-body pre,
-.markdown-body details {
-    margin-top: 0;
-    margin-bottom: 16px;
-}
-
+/*.markdown-body blockquote*/
 .markdown-body blockquote > :first-child {
     margin-top: 0;
 }
@@ -344,36 +284,7 @@
     margin-bottom: 0;
 }
 
-.markdown-body h1 tt,
-.markdown-body h1 code,
-.markdown-body h2 tt,
-.markdown-body h2 code,
-.markdown-body h3 tt,
-.markdown-body h3 code,
-.markdown-body h4 tt,
-.markdown-body h4 code,
-.markdown-body h5 tt,
-.markdown-body h5 code,
-.markdown-body h6 tt,
-.markdown-body h6 code {
-    padding: 0 .2em;
-}
-
-.markdown-body summary h1,
-.markdown-body summary h2,
-.markdown-body summary h3,
-.markdown-body summary h4,
-.markdown-body summary h5,
-.markdown-body summary h6 {
-    display: inline-block;
-}
-
-.markdown-body summary h1,
-.markdown-body summary h2 {
-    padding-bottom: 0;
-    border-bottom: 0;
-}
-
+/*list*/
 .markdown-body ol[type=a] {
     list-style-type: lower-alpha;
 }
@@ -398,22 +309,38 @@
     list-style-type: decimal;
 }
 
-.markdown-body ul ul,
-.markdown-body ul ol,
-.markdown-body ol ol,
-.markdown-body ol ul {
+.markdown-body ul,
+.markdown-body ol {
     margin-top: 0;
     margin-bottom: 0;
+    padding-left: 1em;
+}
+
+.markdown-body ol ol,
+.markdown-body ul ol {
+    list-style-type: lower-roman;
+}
+
+.markdown-body ul ul ol,
+.markdown-body ul ol ol,
+.markdown-body ol ul ol,
+.markdown-body ol ol ol {
+    list-style-type: lower-alpha;
+}
+
+.markdown-body dd {
+    margin-left: 0;
 }
 
 .markdown-body li > p {
-    margin-top: 16px;
+    margin-bottom: 0;
 }
 
 .markdown-body li + li {
     margin-top: .25em;
 }
 
+/*description-list*/
 .markdown-body dl {
 }
 
@@ -426,6 +353,13 @@
 .markdown-body dl dd {
     padding: 0 16px;
     margin-bottom: 16px;
+}
+
+
+/*table*/
+.markdown-body table {
+    border-spacing: 0;
+    border-collapse: collapse;
 }
 
 .markdown-body table th {
@@ -452,59 +386,31 @@
     background-color: transparent;
 }
 
-.markdown-body code,
-.markdown-body tt {
-    padding: .2em .4em;
-    margin: 0;
-    font-size: 85%;
-    white-space: break-spaces;
-    border-radius: 6px;
-}
-
-.markdown-body code br,
-.markdown-body tt br {
-    display: none;
-}
-
-.markdown-body del code {
-    text-decoration: inherit;
-}
-
-.markdown-body samp {
-    font-size: 85%;
-}
-
-.markdown-body pre code {
-    font-size: 100%;
+/*code-block*/
+.markdown-body pre {
+    margin-bottom: 36px;
+    word-break: normal;
 }
 
 .markdown-body pre > code {
-    padding: 0;
-    margin: 0;
-    word-break: normal;
     white-space: pre;
-    border: 0;
 }
 
-.markdown-body .remark-highlight {
-    margin-bottom: 16px;
+.markdown-body h1 tt,
+.markdown-body h1 code,
+.markdown-body h2 tt,
+.markdown-body h2 code,
+.markdown-body h3 tt,
+.markdown-body h3 code,
+.markdown-body h4 tt,
+.markdown-body h4 code,
+.markdown-body h5 tt,
+.markdown-body h5 code,
+.markdown-body h6 tt,
+.markdown-body h6 code {
+    padding: 0 .2em;
 }
 
-.markdown-body .remark-highlight pre {
-    margin-bottom: 0;
-    word-break: normal;
-}
-
-.markdown-body .remark-highlight pre,
-.markdown-body pre {
-    padding: 16px;
-}
-
-.markdown-body pre code,
-.markdown-body pre tt {
-    margin: 0;
-    border: 0;
-}
 
 .markdown-body ::-webkit-calendar-picker-indicator {
     filter: invert(50%);
