ADD: markdown-details component

--- a/src/components/markdown/markdown-styles.module.css
+++ b/src/components/markdown/markdown-styles.module.css
@@ -25,7 +25,8 @@
 }
 
 .markdown-body summary {
-    display: list-item;
+    display: inline-block;
+    letter-spacing: 0.03em;
 }
 
 .markdown-body [hidden] {
@@ -229,15 +230,6 @@
 .markdown-body p {
     margin-top: 0;
     margin-bottom: 8px;
-}
-
-.markdown-body summary h1,
-.markdown-body summary h2,
-.markdown-body summary h3,
-.markdown-body summary h4,
-.markdown-body summary h5,
-.markdown-body summary h6 {
-    display: inline-block;
 }
 
 .markdown-body details summary {
